<resources>
    <string name="app_name">Calculator</string>
    <string name="start_calculating">Start Calculating..</string>
    <string name="clear_button">UNDO</string>
    <string name="exit_button">EXIT</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="equals_button">=</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">/</string>
    <string name="calculator">CALCULATOR</string>
    <string name="backspace">CLEAR</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="decimal_button">.</string>
    <string name="plus_button">+</string>
    <string name="_1">1</string>
</resources>