<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/customborder"
        android:fontFamily="monospace"
        android:text="@string/calculator"
        android:textColor="#e6e6e6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_text"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/customborder"
        android:backgroundTint="#fff"
        android:onClick="clearDisplay"
        android:padding="10dp"
        android:text="@string/start_calculating"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_text" />

    <LinearLayout
        android:id="@+id/button_deck"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_text"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:id="@+id/util_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/erase_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="backSpace"
                android:paddingTop="10dp"
                android:text="@string/clear_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/undo_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="clear"
                android:paddingTop="10dp"
                android:text="@string/backspace"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/exit_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="exit"
                android:paddingTop="10dp"
                android:text="@string/exit_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nums"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nums_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nums_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ops_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/decimal_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="evaluate"
                android:paddingTop="10dp"
                android:text="@string/equals_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ops_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/plus_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/minus_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/multiply_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:onClick="appendChar"
                android:paddingTop="10dp"
                android:text="@string/divide_button"
                android:textAlignment="center"
                android:textColor="#e6e6e6"
                android:textSize="36sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>